force-app/main/default/objects/Omniture_Campaign_Code__c/Omniture_Campaign_Code__c.object-meta.xml
<CustomObject>
    <label>Omniture Campaign Code</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Omniture Campaign Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>