force-app/main/default/objects/Omniture_Campaign_Code__c/fields/Assigned_Lead_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Lead_Owner_ID__c</fullName>
    <inlineHelpText>Input the ID of the user or queue that you want this record assigned to by going to the record for that under setup in SFDC</inlineHelpText>
    <label>Assigned Lead Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>