force-app/main/default/objects/Omniture_Campaign_Code__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>