force-app/main/default/objects/Omniture_Campaign_Code__c/fields/Omniture_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Omniture_Campaign_Code__c</fullName>
    <label>Omniture Campaign Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>