force-app/main/default/objects/Omniture_Campaign_Code__c/fields/Set_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Set_Lead_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this if you want a newly created lead with this Omniture Campaign Code to be assigned to a user or a queue</inlineHelpText>
    <label>Set Lead Owner</label>
    <type>Checkbox</type>
</CustomField>