force-app/main/default/objects/Omniture_Campaign_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Omniture_Campaign_Code__c</columns>
    <columns>Campaign__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Set_Lead_Owner__c</columns>
    <columns>Assigned_Lead_Owner_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>