force-app/main/default/objects/Omniture_Campaign_Code__c/listViews/Codes_Created_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Codes_Created_Last_30_Days</fullName>
    <columns>Omniture_Campaign_Code__c</columns>
    <columns>Campaign__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Set_Lead_Owner__c</columns>
    <columns>Assigned_Lead_Owner_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>Codes Created Last 30 Days</label>
    <language>en_US</language>
</ListView>